--- a/consumers/pom.xml
+++ b/consumers/pom.xml
@@ -41,6 +41,12 @@
             <artifactId>logback-classic</artifactId>
             <version>1.5.20</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.42</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
