--- a/producers/pom.xml
+++ b/producers/pom.xml
@@ -43,6 +43,17 @@
             <artifactId>logback-classic</artifactId>
             <version>1.5.20</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.42</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.20.0</version>
+        </dependency>
     </dependencies>
 
     <build>
